--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
     <title>Lezione #007 | html-css-float-cards</title>
 </head>
 <body>
-    
+    <div class="cointainer">
+<header>
+<h1>Meet our team</h1>
+<p>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi asperiores illo corporis commodi accusantium! Amet ut et accusantium beatae ipsum quidem id est incidunt porro natus quasi, sunt consequuntur ullam.
+</p>
+</header>
+<main>
+
+</main>
+    </div>
 </body>
 </html>
