--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
 </p>
 </header>
 <main>
+    <div class="card">
+    <div class="cart-item">
+    <img src="img/male1.png" alt="Marco Bianchi - Designer">
+    <h2>MARCO BIANCHI</h2>
+    <p>Designr</p>
+    <p><a href="mailto:marcobianchi@team.com">marcobianchi@team.com</a></p>
+    </div>
+    </div>
 
 </main>
     </div>
