--- a/index.html
+++ b/index.html
@@ -16,20 +16,38 @@
 <body>
     <div class="cointainer">
 <header>
-<h1>Meet our team</h1>
-<p>
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi asperiores illo corporis commodi accusantium! Amet ut et accusantium beatae ipsum quidem id est incidunt porro natus quasi, sunt consequuntur ullam.
-</p>
+    <h1>Meet our team</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi asperiores illo corporis commodi accusantium! Amet ut et accusantium beatae ipsum quidem id est incidunt porro natus quasi, sunt consequuntur ullam.</p>
 </header>
-<main>
-    <div class="card">
-    <div class="cart-item">
-    <img src="img/male1.png" alt="Marco Bianchi - Designer">
-    <h2>MARCO BIANCHI</h2>
-    <p>Designr</p>
-    <p><a href="mailto:marcobianchi@team.com">marcobianchi@team.com</a></p>
-    </div>
-    </div>
+    <main>
+        <!-- card 01 -->
+        <div class="card">
+            <div class="cart-item">
+                <img src="img/male1.png" alt="Marco Bianchi - Designer">
+                <h2>MARCO BIANCHI</h2>
+                <p>Designer</p>
+                <p><a href="mailto:marco.bianchi@team.com">marcobianchi@team.com</a></p>
+            </div>
+        </div>
+       
+        <!-- card 02 -->
+        <div class="card">
+            <div class="cart-item">
+                <img src="img/female1.png" alt="Marco Bianchi - Designer">
+                <h2>LAURA ROSSI</h2>
+                <p>Front-end developer</p>
+                <p><a href="mailto:laura.rossi@team.com">laura.rossi@team.com</a></p>
+            </div>
+
+        <!-- card 03 -->
+        <div class="card">
+            <div class="cart-item">
+                <img src="img/male2.png" alt="Marco Bianchi - Designer">
+                <h2>GIORGIO VERDI</h2>
+                <p>Back-end developer</p>
+                <p><a href="mailto:giorgio.verdi@team.com">giorgio.verdi@team.com</a></p>
+            </div>
+        </div>
 
 </main>
     </div>
