--- a/index.html
+++ b/index.html
@@ -20,36 +20,54 @@
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi asperiores illo corporis commodi accusantium! Amet ut et accusantium beatae ipsum quidem id est incidunt porro natus quasi, sunt consequuntur ullam.</p>
 </header>
     <main>
-        <!-- card 01 -->
-        <div class="card">
-            <div class="cart-item">
+        <!-- card -->
+        <div>
+            <!-- card 01 -->
+            <div class="card-item float-left">
                 <img src="img/male1.png" alt="Marco Bianchi - Designer">
                 <h2>MARCO BIANCHI</h2>
                 <p>Designer</p>
                 <p><a href="mailto:marco.bianchi@team.com">marcobianchi@team.com</a></p>
             </div>
-        </div>
-       
-        <!-- card 02 -->
-        <div class="card">
-            <div class="cart-item">
-                <img src="img/female1.png" alt="Marco Bianchi - Designer">
+            <!-- card 02 -->
+            <div class="card-item float-left debag">
+                <img src="img/female1.png" alt="Laura Rossi - Front-end Developer">
                 <h2>LAURA ROSSI</h2>
                 <p>Front-end developer</p>
                 <p><a href="mailto:laura.rossi@team.com">laura.rossi@team.com</a></p>
             </div>
-
-        <!-- card 03 -->
-        <div class="card">
-            <div class="cart-item">
-                <img src="img/male2.png" alt="Marco Bianchi - Designer">
+            <!-- card 03 -->
+            <div class="card-item float-left debag">
+                <img src="img/male2.png" alt="Giorgio Verdi - Back and Developer">
                 <h2>GIORGIO VERDI</h2>
                 <p>Back-end developer</p>
                 <p><a href="mailto:giorgio.verdi@team.com">giorgio.verdi@team.com</a></p>
             </div>
+            <!-- card 04 -->
+            <div class="card-item float-left">
+                <img src="img/female2.png" alt="Marta Ipsum - SEO Specialist">
+                <h2>MARTA IPSUM</h2>
+                <p>SEO Specialist</p>
+                <p><a href="marta.ipsum@team.com">marta.ipsum@team.com</a></p>
+            </div>
+            <!-- card 05 -->
+            <div class="card-item float-left debag">
+                <img src="img/male3.png" alt="Roberto Lorem - Project Manager">
+                <h2>ROBERTO LOREM</h2>
+                <p>Project Manager</p>
+                <p><a href="mailto:roberto.lorem@team.com">loberto.lorem@team.com</a></p>
+            </div>
+            <!-- card 06 -->
+            <div class="card-item float-left debag">
+                <img src="img/female3.png" alt="Daniela Amet - Analysy">
+                <h2>DANIELA AMET</h2>
+                <p>Analysy</p>
+                <p><a href="mailto:daniela.amet@team.com">daniela.amet@team.com</a></p>
+            </div>
+            
         </div>
 
-</main>
+    </main>
     </div>
 </body>
 </html>
