--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </header>
     <main>
         <!-- card -->
-        <div>
+        <div class"cleanfix">
             <!-- card 01 -->
             <div class="card-item float-left">
                 <img src="img/male1.png" alt="Marco Bianchi - Designer">
